# q2-classo-latest

./: .gitignore  Dockerfile  README.md  pyproject.toml
ci/recipe/: meta.yaml
data/: atacama-selected-covariates-veg.tsv
environment-files/: q2-classo-qiime2-amplicon-2025.4.yml
q2_classo/_summarize/: _visualizer.py
tutorial/: atacama.ipynb
