[project]
name = "q2-classo"
authors = [
	{ name = "Oleg Vlasovets", email = "oleg.vlasovetc@gmail.com" }
]
description = "A QIIME 2 plugin for classification and regression using the classo method."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dynamic = ["version"]

[project.urls]
Homepage = "https://qiime2.org"
Repository = "https://github.com/Vlasovets/q2-classo"

[project.entry-points.'qiime2.plugins']
"q2-classo" = "q2_classo.plugin_setup:plugin"

[build-system]
requires = [
	"setuptools",
	"versioningit",
	"wheel"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git-archive"
describe-subst = "$Format:%(describe)$"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "q2_classo/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["q2_classo*"]

[tool.setuptools.package-data]
q2_classo = ["**/*"]
